# save-manager

./: .gitignore  CMakeLists.txt  COPYING.txt  games-debug.yaml  games.yaml  installer.nsi
designs/: design-2.md  desing-1.md
src/: app.cpp  app.hpp  data.cpp  data.hpp  game.cpp  game.hpp  glob.hpp  glob_test.cpp  main.cpp  main_window.cpp  main_window.hpp  models.cpp  models.hpp  save_store.cpp  save_store.hpp  utils.cpp  utils.hpp  zip.cpp  zip.hpp
